# crush

./: .gitattributes  .gitignore  .jscpd.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  README.md  SECURITY.md  T017_IMPLEMENTATION_SUMMARY.md  TESTING.md  clippy.toml  demo.txt  demo.txt.crush  deny.toml  rustfmt.toml
.cargo/: deny.toml
.claude/: settings.json
.claude/commands/: speckit.analyze.md  speckit.implement.md
.claude/hooks/: rust-quality-gate.sh
.config/: nextest.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  release.yml  security-audit.yml
.specify/docs/: duplicate-detection.md
.specify/memory/: constitution.md
.specify/scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  detect-duplicates.ps1  get-spec-data.ps1  update-agent-context.ps1
.specify/tests/powershell/: common.Tests.ps1  create-new-feature.Tests.ps1
crush-cli/: Cargo.toml  README.md  test_log.txt.crush  test_verbose.txt.crush
crush-cli/benches/: PERFORMANCE_VERIFICATION.md  README.md  cli_startup.rs  help_command.rs
crush-cli/src/: cli.rs  config.rs  error.rs  feedback.rs  logging.rs  main.rs  output.rs  signal.rs  state.rs
crush-cli/src/commands/: compress.rs  config.rs  decompress.rs  inspect.rs  mod.rs  plugins.rs  utils.rs
crush-cli/tests/: cancel_feedback.rs  compress.rs  config.rs  decompress.rs  help.rs  inspect.rs  logging.rs  pipeline.rs  plugins.rs  roundtrip.rs
crush-cli/tests/common/: mod.rs
crush-cli/tests/integration/: common.rs  mod.rs
crush-core/: Cargo.toml  README.md
crush-core/benches/: compression.rs  plugin_discovery.rs  plugin_selection.rs
crush-core/fuzz/: Cargo.toml
crush-core/fuzz/fuzz_targets/: compress.rs  decompress.rs
crush-core/src/: cancel.rs  compression.rs  decompression.rs  error.rs  inspection.rs  lib.rs
crush-core/src/plugin/: contract.rs  default.rs  metadata.rs  mod.rs  registry.rs  selector.rs  timeout.rs
crush-core/tests/: cancel_integration.rs  cancel_unit.rs  inspection.rs  plugin_discovery.rs  plugin_selection.rs  roundtrip.rs  timeout.rs
crush-core/tests/fixtures/: README.md
specs/001-project-structure/: constitution-ref.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-project-structure/checklists/: requirements.md
specs/001-project-structure/contracts/: file-locations.md
specs/002-github-actions-ci/: REMINDER.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-github-actions-ci/checklists/: requirements.md
specs/002-github-actions-ci/contracts/: workflow-contracts.md
specs/003-rust-workspace-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rust-workspace-setup/checklists/: requirements.md
specs/003-rust-workspace-setup/contracts/: cli-interface.md  library-api.md  workspace.md
specs/004-plugin-system/: IMPLEMENTATION-COMPLETE.md  plan.md  research.md  spec.md  tasks.md
specs/004-plugin-system/checklists/: requirements.md
specs/005-cli-implementation/: COMPLETION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-cli-implementation/checklists/: requirements.md
specs/005-cli-implementation/contracts/: cli-commands.md
specs/006-cancel-via-ctrl-c/: cleanup-summary.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-cancel-via-ctrl-c/checklists/: requirements.md
specs/006-cancel-via-ctrl-c/contracts/: cancellation-token.md  engine-changes.md
