[package]
name = "crush-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for the Crush compression library"

[[bin]]
name = "crush"
path = "src/main.rs"

[dependencies]
crush-core = { path = "../crush-core" }
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
termcolor = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
is-terminal = "0.4"
ctrlc = "3.4"
dirs = "6.0"
filetime = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serde_json = "1.0"
criterion = "0.5"

[[bench]]
name = "cli_startup"
harness = false

[[bench]]
name = "help_command"
harness = false
