[package]
name = "crush-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance parallel compression library core"

[lib]
name = "crush_core"
path = "src/lib.rs"

[dependencies]
linkme = { workspace = true }
crossbeam = { workspace = true }
rayon = { workspace = true }
flate2 = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
serde =  { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.5"

[[bench]]
name = "plugin_discovery"
harness = false

[[bench]]
name = "plugin_selection"
harness = false

[[bench]]
name = "compression"
harness = false

[lints.clippy]
# Deny all warnings to enforce quality
all = "deny"
# Enable pedantic lints for stricter code quality
pedantic = "warn"
# Constitution requirement: No unwrap() in production
unwrap_used = "deny"
expect_used = "deny"
# Additional safety lints
panic = "deny"
panic_in_result_fn = "deny"
